--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-white">
-  <header class="min-h-screen bg-[url('../images/image.png')] bg-cover bg-center bg-fixed flex flex-col">
+  <header class="min-h-screen bg-[url('./image.png')] bg-cover bg-center bg-fixed flex flex-col">
 
   <nav class="bg-black/60">
     <div class="max-w-7xl mx-auto px-4 flex flex-col sm:flex-row sm:items-center sm:justify-between py-4">
@@ -51,7 +51,7 @@
 
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/djangoproject.png" alt="Django Project Screenshot">
+            <img src="./djangoproject.png" alt="Django Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-1</span>
           </div>
@@ -62,7 +62,7 @@
         </div>
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/personalproject.png" alt="Personal Project Screenshot">
+            <img src="./personalproject.png" alt="Personal Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-2</span>
           </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/aboutme.png" alt="About Me Project Screenshot">
+            <img src="./aboutme.png" alt="About Me Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-3</span>
           </div>
@@ -84,7 +84,7 @@
         </div>
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/djangoproject.png" alt="Django Project Screenshot">
+            <img src="./djangoproject.png" alt="Django Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-4</span>
           </div>
@@ -95,7 +95,7 @@
         </div>
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/personalproject.png" alt="Personal Project Screenshot">
+            <img src="./personalproject.png" alt="Personal Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-5</span>
           </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="design-item">
           <div class="design-img">
-            <img src="../images/aboutme.png" alt="About Me Project Screenshot">
+            <img src="./aboutme.png" alt="About Me Project Screenshot">
             <span><i class="far fa-heart"></i></span>
             <span>Project-6</span>
           </div>
