--- a/sectionpage/section2.html
+++ b/sectionpage/section2.html
@@ -14,7 +14,7 @@
         Practicing front-end fundamentals through responsive design.
       </p>
 
-      <img src="../landingpage/landingpage.html" alt="HTML & CSS Project Screenshot" class="rounded-lg shadow-lg mb-10" />
+      <img src="../landingpage/personalproject.png" alt="HTML & CSS Project Screenshot" class="rounded-lg shadow-lg mb-10" />
 
       <section class="space-y-8">
         <div>
