--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Signin</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -14,19 +13,17 @@
   </head>
 <body class="bg-gray-900 text-black">
   <div class="wrapper">
-    <!-- Left illustration -->
     <div class="illustration">
       <img src="login.png" alt="Illustration" />
     </div>
 
-    <!-- Right form -->
     <div class="form-container">
       <h2 class="text-black">Log in</h2>
       <p class="subtext text-black">
         Welcome! Join my coding journey and get access to my projects, ideas,
         and future creations.
       </p>
-      <form action="../landingpage/landingpage.html" method="get">
+      <form action="landingpage/landingpage.html" method="get">
         <div class="input-group">
           <i class="fa fa-envelope"></i>
           <input type="email" placeholder="Email" />
