change the button to a tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Welcome! Join my coding journey and get access to my projects, ideas,
         and future creations.
       </p>
-      <form action="landingpage/landingpage.html" method="get">
+      <form>
         <div class="input-group">
           <i class="fa fa-envelope"></i>
           <input type="email" placeholder="Email" />
@@ -32,7 +32,7 @@
           <i class="fa fa-lock"></i>
           <input type="password" placeholder="Password" />
         </div>
-        <button type="submit" class="btn">Let’s start!</button>
+        <a href="landingpage/landingpage.html" class="btn">Let’s start!</a>
       </form>
 
       <div class="social-login">
