--- a/sectionpage/section1.html
+++ b/sectionpage/section1.html
@@ -34,7 +34,7 @@
             <li>Clean dashboard using Django Admin</li>
             <li>5 marketplaces fully automated</li>
           </ul>
-        </div>
+        </div>`
 
         <div>
           <h2 class="text-2xl font-semibold mb-3">Tech Stack</h2>
