--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Welcome! Join my coding journey and get access to my projects, ideas,
         and future creations.
       </p>
-      <form>
+      <form action="landingpage/landingpage.html" method="get">
         <div class="input-group">
           <i class="fa fa-envelope"></i>
           <input type="email" placeholder="Email" />
@@ -33,6 +33,7 @@
           <input type="password" placeholder="Password" />
         </div>
         <a href="landingpage/landingpage.html" class="btn">Let’s start!</a>
+
       </form>
 
       <div class="social-login">
