fix the logout path

--- a/landingpage/landingpage.html
+++ b/landingpage/landingpage.html
@@ -45,7 +45,7 @@
               >About</a
             >
             <a
-              href="../loginpage/index.html"
+              href="../index.html"
               class="text-white uppercase tracking-wider hover:text-blue-400 transition"
               >logout</a
             >
