--- a/aboutpage/aboutpage.html
+++ b/aboutpage/aboutpage.html
@@ -103,7 +103,7 @@
         <ul class="list-disc list-inside text-gray-300 space-y-2">
           <li>
             <a
-              href="./projects/django.html"
+              href="../sectionpage/section1.html"
               class="text-blue-400 hover:underline"
               >Django Automation Project</a
             >
@@ -111,7 +111,7 @@
           </li>
           <li>
             <a
-              href="./projects/htmlcss.html"
+              href="../sectionpage/section2.html"
               class="text-blue-400 hover:underline"
               >HTML & CSS Practice Project</a
             >
@@ -119,7 +119,7 @@
           </li>
           <li>
             <a
-              href="./projects/aboutme.html"
+              href="../sectionpage/section3.html"
               class="text-blue-400 hover:underline"
               >About Me Web Development Activity</a
             >
@@ -150,8 +150,8 @@
         <ul class="space-y-3">
           <li>
             <i class="fa-solid fa-envelope mr-2 text-blue-400"></i>
-            <a href="santiagobrian493@gmail.com" class="hover:underline"
-              >santiagobrian493@gmail.com</a
+            <a href="https://myaccount.google.com/?utm_source=chrome-profile-chooser&pli=1" class="hover:underline"
+              >kingstech.brian@gmail.com</a
             >
           </li>
           <li>
