--- a/aboutpage/aboutpage.html
+++ b/aboutpage/aboutpage.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About the Developer | BRI Coding Journey</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
   </head>
+
   <body class="bg-gray-900 text-gray-100 font-sans">
-    <!-- Container -->
     <div class="max-w-6xl mx-auto px-6 py-12 space-y-16">
-      <!-- Intro -->
       <header class="text-center">
         <h1 class="text-4xl font-bold mb-4">About the Developer</h1>
         <p class="text-lg text-gray-400">
@@ -24,9 +22,7 @@
         </p>
       </header>
 
-      <!-- Developer Profile Section -->
       <section class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
-        <!-- Picture with frame -->
         <div class="flex justify-center">
           <div class="relative">
             <div
@@ -40,9 +36,7 @@
           </div>
         </div>
 
-        <!-- Info Box with Who Am I, Journey, Skills -->
         <div class="space-y-8">
-          <!-- Who Am I -->
           <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-semibold mb-3">Who Am I?</h2>
             <p class="text-gray-300 mb-4">
@@ -57,7 +51,6 @@
             </p>
           </div>
 
-          <!-- My Journey -->
           <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-semibold mb-3">My Journey</h2>
             <p class="text-gray-300">
@@ -70,7 +63,6 @@
             </p>
           </div>
 
-          <!-- Skills -->
           <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-semibold mb-3">Skills</h2>
             <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
@@ -97,7 +89,6 @@
         </div>
       </section>
 
-      <!-- Projects Highlight -->
       <section>
         <h2 class="text-2xl font-semibold mb-3">Projects</h2>
         <ul class="list-disc list-inside text-gray-300 space-y-2">
@@ -128,11 +119,10 @@
         </ul>
       </section>
 
-      <!-- Goals -->
       <section>
         <h2 class="text-2xl font-semibold mb-3">Future Goals</h2>
         <ul class="list-disc list-inside text-gray-300 space-y-2">
-          <li>Master JavaScript and build dynamic frontends with React</li>
+          <li>Master JavaScript and build dynamic front-end with React</li>
           <li>Improve backend skills with advanced Django and REST APIs</li>
           <li>Learn database scaling with PostgreSQL</li>
           <li>Explore cloud deployment (AWS/Render/Heroku)</li>
@@ -140,7 +130,6 @@
         </ul>
       </section>
 
-      <!-- Contact -->
       <section>
         <h2 class="text-2xl font-semibold mb-3">Contact</h2>
         <p class="text-gray-300 mb-4">
@@ -150,7 +139,9 @@
         <ul class="space-y-3">
           <li>
             <i class="fa-solid fa-envelope mr-2 text-blue-400"></i>
-            <a href="https://myaccount.google.com/?utm_source=chrome-profile-chooser&pli=1" class="hover:underline"
+            <a
+              href="https://myaccount.google.com/?utm_source=chrome-profile-chooser&pli=1"
+              class="hover:underline"
               >kingstech.brian@gmail.com</a
             >
           </li>
@@ -171,14 +162,15 @@
           </li>
           <li>
             <i class="fa-brands fa-facebook mr-2 text-blue-400"></i>
-            <a href="https://www.facebook.com/share/14L8NmxPKrA/?mibextid=wwXIfr" target="_blank" class="hover:underline"
+            <a
+              href="https://www.facebook.com/share/14L8NmxPKrA/?mibextid=wwXIfr"
+              target="_blank"
+              class="hover:underline"
               >Brian Santiago</a
             >
           </li>
         </ul>
       </section>
-
-      <!-- Back to Home -->
       <div class="text-center pt-8">
         <a
           href="../landingpage/landingpage.html"
